# dolios

./: .env.example  .gitignore  HOST_BRINGUP.md  MODEL_OPTIONS.md  Makefile  README.md  ROADMAP.md  compose.dolo-llm.yml  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/skills/local-llm-stack/: SKILL.md
.dolios/: tick-log.jsonl
.dolios/metrics/dolios/: history.jsonl
.github/workflows/: ci.yml
.memsearch/memory/: 2026-05-23.md  2026-05-24.md  2026-05-25.md  2026-05-26.md
docs/: metrics.md
employees/: README.md
employees/autonomous-coder/: README.md  SOUL.md  config.yaml  env.example
employees/sim-mover/: README.md  SOUL.md  config.yaml  env.example
infra/: gpu-stack.sh
infra/hermes/: Dockerfile  README.md
infra/hermes/cont-init.d/: 03-gh-git-setup
infra/matrix/: README.md
infra/ollama/: models.txt
proposals/: README.md  _template.md
proposals/dolios/: 2026-05-28-adopt-github-actions-ci.md
scripts/: materialize-employee.sh
services/auditor/: README.md  audit.py  ci_api.py  test_audit.py
services/chat-ui/: Dockerfile  app.py
services/coder/: README.md  backlog.py  chunks.py  coder.example.yaml  dispatch.py  prompts.py  reviewer.py  test_backlog.py  test_chunks.py  test_dispatch.py  test_prompts.py  test_reviewer.py  test_tick.py  tick.py
services/hermes/: Dockerfile  pyproject.toml
services/hermes/src/hermes/: agent.py  config.py
services/hermes/src/hermes/personas/: hermes.yaml
services/hermes/src/hermes/tools/: __init__.py  pegasus.py
services/usage-gate/: README.md  test_usage_gate.py  usage_gate.py
(+6 files in other folders)
